--- a/tags.html
+++ b/tags.html
@@ -8,10 +8,10 @@
         <h1 style="font-size:300%;"">Wenhui Deng</h1>
         <h2>About Me</h2>
         <p style="background-color:DodgerBlue;">
-        I was born in Guangzhou, China
+        I was born in Guangzhou,China.
         </p >
-        <p>I went to high school in <span style="border: 1px solid black">Califronia</span> when I was 15 years old</p >
-        <p style="color:red;">I'm majoring in Biochemistry at UW right now </p >
+        <p>I went to high school in <span style="border: 1px solid black">Califronia</span> when I was 15 years old.</p >
+        <p style="color:red;">I'm majoring in Biochemistry at UW right now.</p >
         <h2>My favorite sites</h2>
         
         <ul>
