--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -4,7 +4,7 @@
     <title>Eason Chan</title>
   </head>
   <body>
-    <h1>Eason Chan</h1>
+    <h1 style="background-color:DodgerBlue;">Eason Chan</h1>
     <h2>HTML Audio Tag</h2>
     <audio controls>
      <source src="Eason Chan-.mp3" type="audio/mpeg">
