--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -39,16 +39,16 @@
 		<p>textarea</p>
 		<textarea name="essay" >Blah blah blah...</textarea> <br>
 
-		<p>Are you living in Seattle now?</p>
+		<p>Radio Buttons</p>
 		<input type="radio" name="answer" value="yes">Yes<br>
 		<input type="radio" name="answer" value="no">No<br>
 
-		<p>radio buttons</p>
+		<p>Checkboxes</p>
 		<input type="checkbox" name="vehicle" value="Bike">I have a bike<br>
 		<input type="checkbox" name="vehicle" value="Car">I have a car<br>
 		<input type="checkbox" name="vehicle" value="Bus">I go by bus<br>
 
-		<p>drop down meanu</p>
+		<p>Drop-down list</p>
 		<select name="cars">
 			<option value="volvo">Volvo</option>
 			<option value="saab">Saab</option>
