--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -37,18 +37,18 @@
 		<input type="password" name="pwd" <br>
 
 		<p>textarea</p>
-		<textarea name="essay" >Blah blah blah...</textarea> <br>
+		<textarea name="essay" >Thank you for applying</textarea> <br>
 
-		<p>Radio Buttons</p>
+		<p>Are you living in Seattle now?</p>
 		<input type="radio" name="answer" value="yes">Yes<br>
 		<input type="radio" name="answer" value="no">No<br>
 
-		<p>Checkboxes</p>
+		<p>What type of transportations do you use</p>
 		<input type="checkbox" name="vehicle" value="Bike">I have a bike<br>
 		<input type="checkbox" name="vehicle" value="Car">I have a car<br>
 		<input type="checkbox" name="vehicle" value="Bus">I go by bus<br>
 
-		<p>Drop-down list</p>
+		<p>What is your car brand?</p>
 		<select name="cars">
 			<option value="volvo">Volvo</option>
 			<option value="saab">Saab</option>
