--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -43,7 +43,7 @@
 		<input type="radio" name="answer" value="yes">Yes<br>
 		<input type="radio" name="answer" value="no">No<br>
 
-		<p>What type of transportations do you use</p>
+		<p>What type of transportations do you use? </p>
 		<input type="checkbox" name="vehicle" value="Bike">I have a bike<br>
 		<input type="checkbox" name="vehicle" value="Car">I have a car<br>
 		<input type="checkbox" name="vehicle" value="Bus">I go by bus<br>
