--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -39,9 +39,9 @@
 		<p>textarea</p>
 		<textarea name="essay" >Thank you for applying</textarea> <br>
 
-		<p>Are you living in Seattle now?</p>
-		<input type="radio" name="answer" value="yes">Yes<br>
-		<input type="radio" name="answer" value="no">No<br>
+		<p>Gender</p>
+		<input type="radio" name="answer" value="male">Male <br>
+		<input type="radio" name="answer" value="female">Female<br>
 
 		<p>What type of transportations do you use? </p>
 		<input type="checkbox" name="vehicle" value="Bike">I have a bike<br>
