--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -36,8 +36,8 @@
 		<p>password</p>
 		<input type="password" name="pwd" <br>
 
-		<p>textarea</p>
-		<textarea name="essay" >Thank you for applying</textarea> <br>
+		<p>What is your age?</p>
+		<textarea name="essay" >Thanks for applying</textarea> <br>
 
 		<p>Gender</p>
 		<input type="radio" name="answer" value="male">Male <br>
@@ -48,13 +48,14 @@
 		<input type="checkbox" name="vehicle" value="Car">I have a car<br>
 		<input type="checkbox" name="vehicle" value="Bus">I go by bus<br>
 
-		<p>What is your car brand?</p>
-		<select name="cars">
-			<option value="volvo">Volvo</option>
-			<option value="saab">Saab</option>
-			<option value="fiat">Fiat</option>
-			<option value="audi">Audi</option>
-			<option value="prefer not to answer">Prefer not to answer</option>
+		<p>What type of job are you looking for? </p>
+		<select name="job type">
+			<option value="accoutant">accoutant</option>
+			<option value="HR">HR</option>
+			<option value="receptionist">receptionist</option>
+			<option value="sales">sales</option>
+			<option value="finance">finance</option>
+			<option value="IT">IT</option>
 		</select><br>
 		
 		<div class="field">
