--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -50,7 +50,7 @@
 
 		<p>What type of job are you looking for? </p>
 		<select name="job type">
-			<option value="accoutant">accoutant</option>
+			<option value="accountant">accountant</option>
 			<option value="HR">HR</option>
 			<option value="receptionist">receptionist</option>
 			<option value="sales">sales</option>
