--- a/myFunSite.html
+++ b/myFunSite.html
@@ -102,7 +102,7 @@
       <div class="container">
     		<div class="banner_taital">
     			<h1 class="find_text">Get sneakers & hyper stuff</h1>
-    			<h2 class="crush_text">00% authentic</h2>
+    			<h2 class="crush_text">100% authentic</h2>
     			<p class="long_text">We can meet up in Tulare at the moment. Shipping also available.</p>
     		</div>
     		<div class="contact">
@@ -157,7 +157,7 @@
     				<p class="fact_text">https://instagram.com/jay35_kicks?igshid=1qryrzkfpxb18</p>
     			</div>
     		    <div class="col-lg-4">
-    		    	<div class="image_7"><a href="#"><img src="image/Offerup.png"></a></div>
+    		    	<div class="image_7"><a href="#"><img src="images/Offerup.png"></a></div>
     				<h2 class="design_text">Offerup</h2>
     				<p class="fact_text">https://offerup.co/profile/jaywanq</p>
     		    </div>
